syntax = "proto3";

package astria.protocol.asset.v1alpha1;

// A response containing the denomination given an asset ID.
message DenomResponse {
  uint64 height = 2;
  string denom = 3;
}

// A response containing the allowed fee asset IDs.
message AllowedFeeAssetIdsResponse {
  uint64 height = 1;
  repeated bytes fee_asset_ids = 2;
}